Fixed the scrollbar that was triggered when there are no drafts

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -2,7 +2,6 @@
 
 .App {
   max-height: 100vh;
-  overflow: auto;
 }
 
 .row {
